--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,5 @@ documentation = "https://docs.rs/audact"
 description = "Simple synth and sequencing lib"
 
 [dependencies]
-futures = "0.1.1"
-cpal = "0.4.5"
 rand = "0.3.15"
+rodio = "0.5"
